--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.6.7",
     "core-js": "^3.8.3",
+    "cropperjs": "^1.6.1",
     "element-plus": "^2.6.1",
     "store": "^2.0.12",
     "vue": "^3.2.13",
