--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "element-plus": "^2.6.1",
     "store": "^2.0.12",
     "vue": "^3.2.13",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
